<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/texte_question"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/boutonVrai"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_vrai"
            style="?android:attr/buttonBarButtonStyle"/>
        <Button
            android:id="@+id/boutonFaux"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bouton_faux"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>
    <Button
        android:id="@+id/btnTriche"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bouton_triche"/>

    <Button
        android:id="@+id/btnSuivant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bouton_suivant"
        app:icon="@drawable/fleche_droite"
        app:iconGravity="end"/>

</LinearLayout>