<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".AideActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/txt_attention"/>

    <TextView
        android:id="@+id/tvReponse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        tools:text="@string/txt_réponse"/>

    <Button
        android:id="@+id/btnAfficheAide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_afiche_aide"/>

</LinearLayout>